force-app/main/default/objects/Voucher_Details__c/Voucher_Details__c.object-meta.xml
<CustomObject>
    <label>Voucher Details</label>
    <nameField>
        <label>Voucher Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Voucher Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>