force-app/main/default/objects/Voucher_Details__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>AND(
  NOT(ISBLANK(Applicable_From__c)),
  NOT(ISBLANK(Applicable_To__c)),
  TODAY() &gt;= Applicable_From__c,
  TODAY() &lt;= Applicable_To__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>