force-app/main/default/objects/Voucher_Details__c/fields/Applicable_From__c.field-meta.xml
<CustomField>
    <fullName>Applicable_From__c</fullName>
    <label>Applicable From</label>
    <required>true</required>
    <type>Date</type>
</CustomField>