force-app/main/default/objects/Voucher_Details__c/fields/Applicable_To__c.field-meta.xml
<CustomField>
    <fullName>Applicable_To__c</fullName>
    <label>Applicable To</label>
    <required>true</required>
    <type>Date</type>
</CustomField>