force-app/main/default/objects/Voucher_Details__c/fields/Voucher_Number__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Number__c</fullName>
    <description>Unique identifier for the voucher</description>
    <label>Voucher Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>