force-app/main/default/objects/Voucher_Details__c/fields/Voucher_Type__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Type__c</fullName>
    <description>Type/category of the voucher</description>
    <label>Voucher Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diwali</fullName>
            </value>
            <value>
                <fullName>Xmas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>